--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start-demo": "ng serve",
     "build-demo": "ng build",
-    "build-library": "ng build fastcomments-angular --prod",
+    "build-library": "ng build fastcomments-angular",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -22,7 +22,8 @@
     "@angular/router": "~8.2.4",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.9.1",
+    "fastcomments-typescript": "^1.5.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.3",
