--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,9 @@
       ]
     }
   },
+  "include": [
+    "node_modules/fastcomments-typescript/src/index.ts"
+  ],
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
     "strictInjectionParameters": true
