--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1",
+    "ngx-fastcomments": "^1.0.7",
     "fastcomments-typescript": "^1.5.3"
   },
   "devDependencies": {
