--- a/projects/fastcomments-angular/package.json
+++ b/projects/fastcomments-angular/package.json
@@ -1,7 +1,16 @@
 {
   "name": "ngx-fastcomments",
-  "version": "2.2.0",
-  "keywords": ["fastcomments", "fast-comments", "commenting", "live-comments", "embedded comment widget"],
+  "version": "2.2.1",
+  "keywords": [
+    "fastcomments",
+    "fast-comments",
+    "commenting",
+    "live-comments",
+    "embedded comment widget"
+  ],
+  "dependencies": {
+    "tslib": "^2.0.0"
+  },
   "peerDependencies": {
     "@angular/common": "*",
     "@angular/core": "*",
