--- a/package.json
+++ b/package.json
@@ -21,20 +21,20 @@
     "@angular/platform-browser": "^14.0.2",
     "@angular/platform-browser-dynamic": "^14.0.2",
     "@angular/router": "^14.0.2",
+    "fastcomments-typescript": "^1.6.21",
+    "ngx-fastcomments": "^2.2.1",
     "rxjs": "~6.6.7",
     "tslib": "^2.0.0",
-    "zone.js": "~0.11.6",
-    "ngx-fastcomments": "^2.2.1",
-    "fastcomments-typescript": "^1.6.21"
+    "zone.js": "~0.11.6"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.0.2",
     "@angular/cli": "^14.0.2",
     "@angular/compiler-cli": "^14.0.2",
     "@angular/language-service": "^14.0.2",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~4.0.3",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
