Fixing ivy compat for angular 14
It's not often I have to debug both the angular and typescript compiler, but today is one of those days.

--- a/projects/fastcomments-angular/package.json
+++ b/projects/fastcomments-angular/package.json
@@ -15,5 +15,9 @@
     "@angular/common": "*",
     "@angular/core": "*",
     "fastcomments-typescript": "^1.6.21"
+  },
+  "devDependencies": {
+    "@angular/common": "^14.0.2",
+    "@angular/core": "^14.0.2"
   }
 }
