--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@angular/platform-browser-dynamic": "^14.0.2",
     "@angular/router": "^14.0.2",
     "fastcomments-typescript": "^1.6.21",
-    "ngx-fastcomments": "projects/fastcomments-angular",
+    "ngx-fastcomments": "^2.3.2",
     "rxjs": "~6.6.7",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.6"
