--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "ngx-fastcomments": "^2.3.2",
     "rxjs": "~6.6.7",
     "tslib": "^2.0.0",
-    "zone.js": "~0.14.10"
+    "zone.js": "^0.15.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^18.2.12",
