--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "build-demo": "ng build",
     "build-library": "ng build fastcomments-angular",
     "update": "ng update",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
@@ -25,26 +23,15 @@
     "ngx-fastcomments": "^2.3.2",
     "rxjs": "~6.6.7",
     "tslib": "^2.0.0",
-    "zone.js": "^0.15.0"
+    "zone.js": "^0.14.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^18.2.12",
     "@angular/cli": "^18.2.12",
     "@angular/compiler-cli": "^18.2.13",
     "@angular/language-service": "^18.2.13",
-    "@types/jasmine": "~4.0.3",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.2",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "@types/node": "^20.0.0",
     "ng-packagr": "^18.2.1",
-    "protractor": "~7.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~6.1.0",
     "typescript": "~5.4.5"
